--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Nunito", serif;
+  background-image: linear-gradient(rgb(0, 0, 0) , rgb(21, 23, 53));
 }
 
 ::-webkit-scrollbar {
@@ -165,10 +166,11 @@ nav a:hover {
 }
 
 .main-content {
-  background-color: #000000;
+  background-color: rgb(13, 15, 31);
   color: white;
   min-height: 100vh;
-  padding: 3rem 5rem;
+  padding: 6rem;
+  border-radius: 5rem;
 }
 
 .main-content h2 {
@@ -234,4 +236,110 @@ nav a:hover {
 
 .sumber li a:hover {
   color: rgb(118, 118, 255);
+}
+
+/* card */
+
+#card-info {
+  min-height: 100vh;
+  padding: 4rem;
+}
+
+#card-info h2 {
+  color: crimson;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  margin: 0;
+  top: -10rem;
+}
+
+.card-content {
+  padding: 5rem 0;
+}
+
+.card-wrapper {
+  padding: 5rem 5%;
+}
+
+.card-area {
+  display: grid;
+  margin-top: 2rem;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.card {
+  position: relative;
+  border-radius: 0.5rem;
+  box-sizing: 5px 5px 15px rgba(0,0,0,0.5);
+}
+
+.card img {
+  height: 450px;
+  width: 100%;
+  display: block;
+  border-radius: 10px;
+  transition: transform 0.5s;
+  object-fit: cover;
+  transform: scale(1);
+}
+
+.overlay {
+  overflow: hidden;
+  height: 0;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
+  left: 0;
+  bottom: 0;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  background: radial-gradient(circle, transparent, rgba(0, 0, 0, 0.8));
+  z-index: 100;
+  transform: scale(1.04);
+}
+
+.card:hover img {
+  transform: scale(1.02);
+}
+
+.card:hover .overlay {
+  height: 100%;
+}
+
+.card h2 {
+  font-size: 2rem;
+  color: crimson;
+  margin-bottom: 0;
+}
+
+.card p {
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  padding: 0rem 2rem;
+}
+
+.card a {
+  background-color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 2rem;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  padding: 0.8rem 2rem;
+  transition: all 0.25s ease-in-out;
+}
+
+.card a:hover {
+  background-color: crimson;
+  color: white;
+  font-weight: bold;
 }
